trying to stop menu bar from shifting

--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -13,7 +13,7 @@ a
   box-shadow: 0 2px transparent
   text-decoration-color: transparent
   header &, footer &, nav &
-    font-weight: bold
+    font-weight: normal
   header &, footer &:not(:hover)
     color: inherit
   nav &:not(:hover)
